--- a/force-app/main/default/pages/pmt_adyencc_edit.page
+++ b/force-app/main/default/pages/pmt_adyencc_edit.page
@@ -1,75 +1,59 @@
-<!--
-- Created by harm on 2019-08-22.
--->
-
 <apex:page controller="PmtAdyenEditController" docType="html-5.0" applyHtmlTag="false" showHeader="false" sidebar="false" standardStylesheets="false">
     <apex:includeScript value="{! $Resource.validations }"/>
     <script id="MyAccount-MyWalletPO-Desktop" type="text/template">
-    <div id="overlayCustom" class="modal-backdrop fade in" style="display: none" />
+    <div id="overlayCustom" class="modal-backdrop fade in" style="display:none"></div>
     <div class="panel panel-default cc_panel cc_myaccount_mywallet">
         <div class="panel-heading cc_heading">
             <h3 class="panel-title cc_title">{{pageLabelMap 'MyWallet_EditPymtMtd'}}</h3>
             </div>
             <div class="cc_myaccount_content panel-body cc_body">
-                {{#if errors}}
-                 <div class="poPayment-messagingSection-Error">
-                 {{#each errors}}
-                 <div class="alert alert-danger">{{this.message}}</div>
-                 {{/each}}
-                 </div>
-                 {{/if}}
-                 {{#if info}}
-                 <div class="poPayment-messagingSection-Error">
-                 <div class="alert alert-info">{{info}}</div>
-                 </div>
-                 {{/if}}
                  <div class="error_messages_section" style="display:none;"></div>
                  <form id="editAdyenccForm" class="form-horizontal editAdyenccForm cc_edit_po_form">
                      <h4>{{pageLabelMap 'MyWallet_EditAdyencc'}}</h4>
+                     <div class="alert alert-info">To update the card details, please <a href="/ccrz__StoredPaymentDetail?pt=adyencc&mode=new">add a new card</a> in My Wallet</div>
                      <div class="form-group displayName">
                          <label for="displayName" class="col-sm-2 control-label poLabel Name fieldLabel">{{pageLabelMap 'MyWallet_NameOpt'}}</label>
-                             <div class="col-sm-10">
-                             <input id="displayName" type="text" class="form-control" value="{{this.displayName}}" name="displayName" maxlength="50" />
-                             </div>
-                             </div>
-                             <div class="form-group accountNumber">
-                             <label for="accountNumber" class="col-sm-2 control-label poLabel Number fieldLabel">{{pageLabelMap 'MyWallet_AdyenccCreditCardNumber'}}</label>
-                             <div class="col-sm-10">
+                         <div class="col-sm-10">
+                         <input id="displayName" type="text" class="form-control" value="{{this.displayName}}" name="displayName" maxlength="50" />
+                         </div>
+                     </div>
+                     <div class="form-group accountNumber">
+                         <label for="accountNumber" class="col-sm-2 control-label poLabel Number fieldLabel">{{pageLabelMap 'MyWallet_AdyenccCreditCardNumber'}}</label>
+                         <div class="col-sm-10">
                              <input id="accountNumber" type="text" class="form-control" name="accountNumber" value="{{this.accountNumber}}" maxlength="16" readonly />
-                             </div>
-                             </div>
-                             
-                             <div class="form-group expirationMonth">
-                             <label for="expirationMonth" class="col-sm-2 control-label poLabel Number fieldLabel">{{pageLabelMap 'MyWallet_AdyenccExpirationMonth'}}</label>
-                             <div class="col-sm-10">
-                             <input id="expirationMonth" type="text" class="form-control" name="expirationMonth" value="{{this.expirationMonth}}" maxlength="2" placeholder="MM" />
-                             </div>
-                             </div>
-                             <div class="form-group expirationYear">
-                             <label for="expirationYear" class="col-sm-2 control-label poLabel Number fieldLabel">{{pageLabelMap 'MyWallet_AdyenccExpirationYear'}}</label>
-                             <div class="col-sm-10">
-                             <input id="expirationYear" type="text" class="form-control" name="expirationYear" value="{{this.expirationYear}}" maxlength="4" placeholder="YYYY" />
-                             </div>
-                             </div>
-                             <div class="form-group">
-                             <div class="col-sm-offset-2 col-sm-10">
+                         </div>
+                     </div>
+                     <div class="form-group expirationMonth">
+                         <label for="expirationMonth" class="col-sm-2 control-label poLabel Number fieldLabel">{{pageLabelMap 'MyWallet_AdyenccExpirationMonth'}}</label>
+                         <div class="col-sm-10">
+                             <input id="expirationMonth" type="text" class="form-control" name="expirationMonth" value="{{this.expirationMonth}}" maxlength="2" placeholder="MM" readonly/>
+                         </div>
+                     </div>
+                     <div class="form-group expirationYear">
+                         <label for="expirationYear" class="col-sm-2 control-label poLabel Number fieldLabel">{{pageLabelMap 'MyWallet_AdyenccExpirationYear'}}</label>
+                         <div class="col-sm-10">
+                             <input id="expirationYear" type="text" class="form-control" name="expirationYear" value="{{this.expirationYear}}" maxlength="4" placeholder="YYYY" readonly/>
+                         </div>
+                     </div>
+                     <div class="form-group">
+                         <div class="col-sm-offset-2 col-sm-10">
                              <div class="checkbox">
-                             <label for="isEnabled" class="poLabel SavePayment fieldLabel">
-                             <input type="checkbox" name="isEnabled" id="isEnabled" {{#if this.isEnabled}}checked{{/if}} />{{pageLabelMap 'MyWallet_Enabled'}}
-                             </label>
-                             </div>
-                             </div>
-                             </div>
-                             <div class="form-group">
-                             <div class="col-sm-offset-2 col-sm-10">
-                             <input type="button" class='btn btn-default btn-sm button cancelPO cc_cancel_po' id="cancelPO" value="{{pageLabelMap 'MyWallet_Cancel'}}" />
-                             <input type="button" class='btn btn-default btn-sm button savePO cc_save_po' id="savePO" value="{{pageLabelMap 'MyWallet_SaveToWall'}}" />
-                             </div>
-                             </div>
-                             </form>
-                             </div>
-                             </div>
-                             </script>
+                                 <label for="isEnabled" class="poLabel SavePayment fieldLabel">
+                                 <input type="checkbox" name="isEnabled" id="isEnabled" {{#if this.isEnabled}}checked{{/if}} />{{pageLabelMap 'MyWallet_Enabled'}}
+                                 </label>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="form-group">
+                         <div class="col-sm-offset-2 col-sm-10">
+                             <input type="button" class='btn btn-default btn-sm button cancelPO cc_cancel_po' id="cancelNewCard" value="{{pageLabelMap 'MyWallet_Cancel'}}" />
+                             <input type="button" class='btn btn-default btn-sm button savePO cc_save_po' id="saveCard" value="{{pageLabelMap 'MyWallet_SaveToWall'}}" />
+                         </div>
+                     </div>
+                 </form>
+                 </div>
+             </div>
+     </script>
     
     
     <script>
@@ -84,7 +68,6 @@
     jQuery(function($) {
         CCRZ.models.StoredPaymentsAdyenccModel = CCRZ.CloudCrazeModel.extend({
             className : "PmtAdyenEditController"
-            
         });
         
         CCRZ.views.StoredPaymentsAdyenccView = CCRZ.CloudCrazeView.extend({
@@ -97,29 +80,11 @@
                 this.render();
             },
             events: {
-                "click #savePO" : "updatePONumber",
-                "click #cancelPO" : "cancelNewPONumber"
-            },
-            initValidation : function() {
-                $('#editAdyenccForm').validate({
-                    invalidHandler : function(event, validator) {
-                        CCRZ.handleValidationErrors(event, validator, 'error_messages_section', false);
-                    },
-                    rules : {
-                        accountNumber : { required : true },
-                        expirationMonth : { required : true, range : [1,12] },
-                        expirationYear : { required : true }
-                    },
-                    messages : {
-                        accountNumber : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_accountNumberReq']},
-                        expirationMonth : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationMonthReq'], range : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationMonthInvalid']},
-                        expirationYear : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationYearReq']}
-                    },
-                    errorPlacement : function(error, element) { }
-                });
+                "click #saveCard" : "updateCardNumber",
+                "click #cancelNewCard" : "cancelNewCard"
             },
             preRender : function() {
-                this.data={
+                this.data= {
                     'storedPaymentId' : storedPaymentId,
                     'displayName' : displayName,
                     'accountNumber' : accountNumber,
@@ -138,58 +103,35 @@
                 this.setElement($(CCRZ.uiProperties.StoredPaymentsPOView.phone.selector));
                 this.$el.html(this.templatePhone(this.data));
             },
-            postRender : function() {
-                this.initValidation();
-            },
-            cancelNewPONumber : function(){
+            cancelNewCard : function(){
                 myWallet();
             },
-            updatePONumber : function(event) {
-                if ($('#editAdyenccForm').valid()) {
-                    var formData = form2js("editAdyenccForm", '.', false, function(node) {}, false);
-                    formData.storedPaymentId = this.data.storedPaymentId;
-                    formData.isEnabled = formData.isEnabled != null ? true : false;
-                    expirationMonth = formData.expirationMonth;
-                    expirationYear = formData.expirationYear;
-                    isEnabled = formData.isEnabled;
-                    displayName = formData.displayName;
-                    
-                    var v = this;
-                    
-                    let self = this;
-                    loadingToggle();
-                    Visualforce.remoting.Manager.invokeAction(
-                        '{!$RemoteAction.PmtAdyenEditController.updateAdyenccStoredPayment}',
-                        CCRZ.pagevars.remoteContext,
-                        JSON.stringify(formData),
-                        function(result, event){
-                            let success = false;
-                            if (event.status && result.success) {
-                                myWallet();
-                                errorMsgs = null;
-                                self.data.errors = null;
-                                infoMsg = CCRZ.pagevars.pageLabels['Adyencc_EditPaymentMethodSuccess'];
-                                self.data.info = CCRZ.pagevars.pageLabels['Adyencc_EditPaymentMethodSuccess'];
-                                success = true;
-                            } else if (event.type === 'exception') {
-                                errorMsgs = result.messages;
-                                self.data.errors = result.messages;
-                                loadingToggle();
-                            } else {
-                                errorMsgs = result.messages;
-                                self.data.errors = result.messages;
-                                loadingToggle();
-                            }
-                            self.render();
-                            if(success){
-                                setTimeout(function(){
-                                    myWallet();
-                                } , 5000);  
-                            }
-                        },
-                        {escape: true}
-                    );
-                }
+            updateCardNumber : function() {
+                loadingToggle();
+                var formData = form2js("editAdyenccForm", '.', false, function(node) {}, false);
+                formData.storedPaymentId = this.data.storedPaymentId;
+                formData.isEnabled = formData.isEnabled != null ? true : false;
+                let self = this;
+                Visualforce.remoting.Manager.invokeAction(
+                    '{!$RemoteAction.PmtAdyenEditController.updateAdyenStoredPayment}',
+                    CCRZ.pagevars.remoteContext,
+                    JSON.stringify(formData),
+                    function (result) {
+                        if (result.success) {
+                            errorMsgs = null;
+                            self.data.errors = null;
+                            infoMsg = CCRZ.pagevars.pageLabels['Adyencc_EditPaymentMethodSuccess'];
+                            self.data.info = CCRZ.pagevars.pageLabels['Adyencc_EditPaymentMethodSuccess'];
+                            myWallet();
+                        }
+                        else {
+                            errorMsgs = result.messages;
+                            self.data.errors = result.messages;
+                            loadingToggle();
+                        }
+                    },
+                    {escape: true}
+                );
             }
         });
         
